--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,6 @@ DATABASE_URL=postgres://postgres:password@localhost:5433/kiros_triage
 # Server
 PORT=4000
 
-# LLM API
-LLM_PROVIDER=gemini
-LLM_API_KEY=your_api_key_hereyour_api_key_here
+# LLM API (groq or gemini)
+LLM_PROVIDER=groq
+LLM_API_KEY=your_groq_api_key_here
