--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3.8'
+
 services:
-  postgres:
+  # Database Service
+  db:
     image: postgres:15
+    container_name: kiros_db
     ports:
       - "5433:5432"
     environment:
@@ -11,5 +14,66 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./backend/migrations:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  # Backend API Service
+  api:
+    build: ./backend
+    container_name: kiros_api
+    ports:
+      - "4000:4000"
+    environment:
+      - PORT=4000
+      - DATABASE_URL=postgres://postgres:password@db:5432/kiros_triage
+      - FRONTEND_URL=http://localhost:3000
+      # Pass API Key from host env or .env file
+      - LLM_API_KEY=${LLM_API_KEY}
+    depends_on:
+      db:
+        condition: service_healthy
+    command: npm run dev
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+
+  # AI Worker Service
+  worker:
+    build: ./backend
+    container_name: kiros_worker
+    environment:
+      - DATABASE_URL=postgres://postgres:password@db:5432/kiros_triage
+      - LLM_API_KEY=${LLM_API_KEY}
+      # Point to internal API container name
+      - API_URL=http://api:4000/api
+    depends_on:
+      - db
+      - api
+    command: npm run worker
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+
+  # Frontend Service
+  web:
+    build: ./frontend
+    container_name: kiros_web
+    ports:
+      - "3000:3000"
+    environment:
+      # Client-side env needs NEXT_PUBLIC_ prefix
+      - NEXT_PUBLIC_API_URL=http://localhost:4000/api
+    depends_on:
+      - api
+    # For dev mode use "npm run dev"
+    command: npm run dev
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+
 volumes:
   pgdata:
+
